--- a/products/src/App.css
+++ b/products/src/App.css
@@ -1,33 +1,45 @@
-.App {
+body {
+  margin: 0;
+  padding: 0;
+}
+
+header {
+  background: #707070 0% 0% no-repeat padding-box;
+  border: 1px solid #707070;
+  opacity: 1;
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+p {
+  font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+header p {
+  text-align: center;
+  letter-spacing: 0;
+  color: #FFFFFF;
+  opacity: 1;
 }
 
-.App-link {
-  color: #61dafb;
+header p:first-child {
+  font-size: 20px;
+  margin-top: 69px
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+header p:nth-child(2) {
+  font-size: 40px;
+  font-weight: bold;
+  margin-top: 0
 }
+
+header p:nth-child(3) {
+  font-size: 14px;
+  margin-top: 24px;
+}
+
+
+/* 
+References:
+https://www.freecodecamp.org/news/how-to-center-things-with-style-in-css-dc87b7542689/ 
+
+*/
