--- a/products/src/App.css
+++ b/products/src/App.css
@@ -17,26 +17,37 @@ p {
 header p {
   text-align: center;
   letter-spacing: 0;
-  color: #FFFFFF;
+  color: #ffffff;
   opacity: 1;
 }
 
 header p:first-child {
-  font-size: 20px;
-  margin-top: 69px
+  font: normal 20px/24px "Helvetica Neue";
+  margin-top: 69px;
+  margin-bottom: 0px;
 }
 
 header p:nth-child(2) {
-  font-size: 40px;
-  font-weight: bold;
-  margin-top: 0
+  font: Bold 40px/49px "Helvetica Neue";
+  margin-top: 0;
 }
 
 header p:nth-child(3) {
-  font-size: 14px;
+  font: normal 14px/16px "Helvetica Neue";
   margin-top: 24px;
 }
 
+header input[type="button"] {
+  width: 160px;
+  height: 40px;
+  margin: 20px;
+  background: #ffffff 0% 0% no-repeat padding-box;
+  color: #888888;
+  box-shadow: 0px 1px 6px #00000029;
+  border: 1px solid #707070;
+  border-radius: 4px;
+  opacity: 1;
+}
 
 /* 
 References:
