--- a/products/src/App.css
+++ b/products/src/App.css
@@ -5,7 +5,7 @@ body {
 }
 
 p {
-  font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font: normal 14px/16px "Helvetica Neue";
   color: #888888;
   letter-spacing: 0;
   opacity: 1;
@@ -55,29 +55,32 @@ nav {
   width: 80vw;
 }
 
-@media screen and (max-width: 480px) {
-  nav {
-    width: auto;
-    flex-flow: row wrap;
-  }
-}
-
-header input[type="button"] {
+input[type="button"] {
+  font-size: 16px;
   padding: 1vh;
-  width: 160px;
   height: 40px;
   background: #ffffff 0% 0% no-repeat padding-box;
   color: #888888;
-  box-shadow: 0px 1px 6px #00000029;
   border: 1px solid #707070;
   border-radius: 4px;
   opacity: 1;
+}
+
+header input[type="button"] {
+  box-shadow: 0px 1px 6px #00000029;
+  font-size: 14px;
+  width: 160px;
 }
 
 h2 {
   align-self: center;
   font: Bold 18px/16px "Helvetica Neue";
   color: #888888;
+  margin: 50px;
+}
+
+.productDescription {
+  font: normal 12px/16px "Helvetica Neue";
 }
 
 .productList {
@@ -85,7 +88,7 @@ h2 {
   flex: 1;
   justify-content: center;
   flex-flow: row wrap;
-  padding: 19vh;
+  padding: 0 10vw;
 }
 
 .productCard {
@@ -94,11 +97,25 @@ h2 {
   text-align: left;
   padding: 20px;
   width: 201px;
-  height: 350px;
+}
+
+.priceAfter {
+  font: Bold 16px/16px "Helvetica Neue";
+}
+
+@media screen and (max-width: 480px) {
+  nav {
+    width: auto;
+    flex-flow: row wrap;
+  }
 }
 
 .buyButton {
   width: 100%;
+}
+
+.moreProductsButton {
+  width: 260px;
 }
 
 /* 
