--- a/products/src/App.css
+++ b/products/src/App.css
@@ -2,11 +2,12 @@ body {
   margin: 0;
   padding: 0;
   text-align: center;
+  color: #888888;
 }
 
-p {
-  font: normal 14px/16px "Helvetica Neue";
-  color: #888888;
+p,
+label {
+  font: normal 12px/16px "Helvetica Neue";
   letter-spacing: 0;
   opacity: 1;
 }
@@ -18,15 +19,13 @@ img {
   height: 150px;
 }
 
-header {
+header,
+footer {
   padding: 25px 0;
   background: #707070 0% 0% no-repeat padding-box;
   border: 1px solid #707070;
   opacity: 1;
   align-items: center;
-}
-
-header p {
   color: #ffffff;
 }
 
@@ -55,6 +54,7 @@ nav {
   width: 80vw;
 }
 
+input[type="submit"],
 input[type="button"] {
   font-size: 16px;
   padding: 1vh;
@@ -66,6 +66,10 @@ input[type="button"] {
   opacity: 1;
 }
 
+input[type="submit"] {
+  width: 260px;
+}
+
 header input[type="button"] {
   box-shadow: 0px 1px 6px #00000029;
   font-size: 14px;
@@ -73,14 +77,11 @@ header input[type="button"] {
 }
 
 h2 {
-  align-self: center;
   font: Bold 18px/16px "Helvetica Neue";
-  color: #888888;
-  margin: 50px;
 }
 
-.productDescription {
-  font: normal 12px/16px "Helvetica Neue";
+h3 {
+  font: normal 14px/16px "Helvetica Neue";
 }
 
 .productList {
@@ -99,7 +100,11 @@ h2 {
   width: 201px;
 }
 
-.priceAfter {
+.pricesDiv p {
+  font-size: 14px;
+}
+
+.pricesDiv .priceAfter {
   font: Bold 16px/16px "Helvetica Neue";
 }
 
@@ -116,6 +121,39 @@ h2 {
 
 .moreProductsButton {
   width: 260px;
+}
+
+section {
+  display: inline-block;
+}
+
+section > * {
+  margin: 25px 0;
+}
+
+form > * {
+  margin: 25px 20px;
+}
+
+.inputContainer {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+}
+
+.inputField {
+  margin: 0 20px;
+  display: flex;
+  flex-flow: column wrap;
+  width: 350px;
+}
+
+label {
+  text-align: left;
+}
+
+footer {
+  padding: 20px;
 }
 
 /* 
