--- a/products/src/App.css
+++ b/products/src/App.css
@@ -1,18 +1,32 @@
+/* Default */
 body {
   margin: 0;
   padding: 0;
   text-align: center;
   color: #888888;
-}
-
-p,
-label,
-a {
-  font: normal 12px/16px "Helvetica Neue";
   letter-spacing: 0;
   opacity: 1;
+  font-size: 12px;
+  line-height: 16px;
+  font-family: "Helvetica Neue", Helvetica;
 }
 
+/* Texts */
+label {
+  text-align: left;
+}
+
+h2 {
+  font-weight: bold;
+  font-size: 18px;
+}
+
+h3 {
+  font-weight: normal;
+  font-size: 14px;
+}
+
+/* Image */
 img {
   background: #ffffff 0% 0% no-repeat padding-box;
   border: 1px solid #707070;
@@ -20,124 +34,113 @@ img {
   height: 150px;
 }
 
+/* Sections */
 header,
 footer {
-  padding: 25px 0;
   background: #707070 0% 0% no-repeat padding-box;
   border: 1px solid #707070;
-  opacity: 1;
   align-items: center;
+  padding: 25px 0;
   color: #ffffff;
 }
 
+header {
+  padding-top: 69px;
+}
+
+section > * {
+  margin: 50px 0;
+}
+
+footer {
+  padding: 70px 0;
+}
+
+/* Header */
 header p:first-child {
-  font: normal 20px/24px "Helvetica Neue";
-  margin-top: 69px;
+  font-size: 20px;
+  line-height: 24px;
   margin-bottom: 0px;
 }
 
 header p:nth-child(2) {
-  font: Bold 40px/49px "Helvetica Neue";
+  font-weight: bold;
+  font-size: 40px;
+  line-height: 49px;
   margin-top: 0;
 }
 
-header p:nth-child(3) {
-  font: normal 14px/16px "Helvetica Neue";
-  padding: 25px;
-}
-
 nav {
-  padding: 1vw;
-  margin: 0 10vw;
   display: flex;
-  justify-content: space-around;
   flex-flow: row nowrap;
-  width: 80vw;
+  justify-content: center;
+  margin: 50px 0;
+  padding: 0 20px;
 }
 
-input[type="submit"],
-input[type="button"],
-a > button {
-  font-size: 16px;
-  padding: 1vh;
-  height: 40px;
+/* Input: */
+input,
+button {
   background: #ffffff 0% 0% no-repeat padding-box;
+  font-size: 16px;
   color: #888888;
   border: 1px solid #707070;
   border-radius: 4px;
-  opacity: 1;
-}
-
-input[type="submit"] {
+  height: 40px;
   width: 260px;
 }
 
-h2 {
-  font: Bold 18px/16px "Helvetica Neue";
-}
-
-h3 {
-  font: normal 14px/16px "Helvetica Neue";
-}
-
-.productList {
-  display: flex;
-  flex: 1;
-  justify-content: center;
-  flex-flow: row wrap;
-  padding: 0 10vw;
-}
-
-.productCard {
-  display: flex;
-  flex-flow: row wrap;
-  text-align: left;
-  padding: 20px;
-  width: 201px;
-}
-
-.pricesDiv p {
+.navButton {
   font-size: 14px;
-}
-
-.pricesDiv .priceAfter {
-  font: Bold 16px/16px "Helvetica Neue";
+  margin: 0 20px;
+  width: 160px;
 }
 
 .buyButton {
   width: 100%;
 }
 
-.moreProductsButton {
-  width: 260px;
+.inputField {
+  width: 340px;
+  height: 30px;
 }
 
-section {
-  display: inline-block;
+/* Content */
+.productList {
+  max-width: 1040px;
+  margin: 0 auto;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  padding: 0 20px;
 }
 
-section > * {
-  margin: 25px 0;
+.productCard {
+  display: flex;
+  flex-flow: row wrap;
+  text-align: left;
+  width: 201px;
+  padding: 20px;
 }
 
+.pricesDiv .priceAfter {
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 16px;
+}
+
+/* Form */
 form > * {
   margin: 25px 20px;
 }
 
 .inputContainer {
   display: flex;
-  flex-flow: row wrap;
+  flex-flow: row nowrap;
   justify-content: center;
 }
 
-@media screen and (max-width: 480px) {
-  nav {
-    width: auto;
-    flex-flow: row wrap;
-  }
-}
-
-.inputField {
+.inputBox {
   margin: 0 20px;
   display: flex;
   flex-flow: column wrap;
@@ -145,10 +148,22 @@ form > * {
   max-width: 350px;
 }
 
-label {
-  text-align: left;
-}
+/* Responsive */
+@media screen and (max-width: 480px) {
+  nav {
+    width: auto;
+    flex-flow: column wrap;
+  }
 
-footer {
-  padding: 20px;
+  .inputContainer {
+    flex-flow: row wrap;
+  }
+
+  .productList {
+    margin: 0 0;
+  }
+
+  .inputField {
+    width: 100%;
+  }
 }
