--- a/products/src/App.css
+++ b/products/src/App.css
@@ -1,13 +1,14 @@
 /* Default */
 body {
+  --default-font-size: 12px;
   margin: 0;
   padding: 0;
   text-align: center;
   color: #888888;
   letter-spacing: 0;
   opacity: 1;
-  font-size: 12px;
-  line-height: 16px;
+  font-size: var(--default-font-size);
+  line-height: calc(var(--default-font-size) + 4px);
   font-family: "Helvetica Neue", Helvetica;
 }
 
@@ -18,12 +19,12 @@ label {
 
 h2 {
   font-weight: bold;
-  font-size: 18px;
+  font-size: calc(var(--default-font-size) + 6px);
 }
 
 h3 {
   font-weight: normal;
-  font-size: 14px;
+  font-size: calc(var(--default-font-size) + 2px);
 }
 
 /* Image */
@@ -58,14 +59,14 @@ footer {
 
 /* Header */
 header p:first-child {
-  font-size: 20px;
+  font-size: calc(var(--default-font-size) + 8px);
   line-height: 24px;
   margin-bottom: 0px;
 }
 
 header p:nth-child(2) {
   font-weight: bold;
-  font-size: 40px;
+  font-size: calc(var(--default-font-size) + 28px);
   line-height: 49px;
   margin-top: 0;
 }
@@ -75,25 +76,27 @@ nav {
   flex-flow: row nowrap;
   justify-content: center;
   margin: 50px 0;
-  padding: 0 20px;
+
+  padding: 0 10px;
 }
 
 /* Input: */
 input,
 button {
   background: #ffffff 0% 0% no-repeat padding-box;
-  font-size: 16px;
+  font-size: calc(var(--default-font-size) + 4px);
   color: #888888;
   border: 1px solid #707070;
   border-radius: 4px;
-  height: 40px;
-  width: 260px;
+  min-height: 40px;
 }
 
-.navButton {
-  font-size: 14px;
+.navButton,
+nav > a {
+  font-size: calc(var(--default-font-size) + 2px);
   margin: 0 20px;
   width: 160px;
+  margin: auto;
 }
 
 .buyButton {
@@ -125,7 +128,7 @@ button {
 
 .pricesDiv .priceAfter {
   font-weight: bold;
-  font-size: 16px;
+  font-size: calc(var(--default-font-size) + 4px);
   line-height: 16px;
 }
 
@@ -149,7 +152,7 @@ form > * {
 }
 
 /* Responsive */
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 800px) {
   nav {
     width: auto;
     flex-flow: column wrap;
